load i18n lack Se agregan nuevos campos a la configuracion de campos dinamicos, campos para defautl,visible, group y campo a mostrar

--- a/pyt-contabilidad/pyt-app/properties/names-sql.properties
+++ b/pyt-contabilidad/pyt-app/properties/names-sql.properties
@@ -293,6 +293,10 @@ co.com.japl.ea.dto.system.ConfigGenericFieldDTO.isRequired=brequired
 co.com.japl.ea.dto.system.ConfigGenericFieldDTO.name=sname
 co.com.japl.ea.dto.system.ConfigGenericFieldDTO.state=nstate
 co.com.japl.ea.dto.system.ConfigGenericFieldDTO.width=nwidth
+co.com.japl.ea.dto.system.ConfigGenericFieldDTO.valueDefault=sdefault
+co.com.japl.ea.dto.system.ConfigGenericFieldDTO.isVisible=bvisible
+co.com.japl.ea.dto.system.ConfigGenericFieldDTO.fieldShow=sfieldshow
+co.com.japl.ea.dto.system.ConfigGenericFieldDTO.group=sgroup
 co.com.japl.ea.dto.system.ConfigGenericFieldDTO.orden=norder
 co.com.japl.ea.dto.system.GroupUsersDTO=TBL_GROUP_USER
 co.com.japl.ea.dto.system.GroupUsersDTO.description=sdescription
