load i18n lack Se realiza ajuste de la pantalla de usuarios para ver usuarios actualizar y crear nuevos registros.

--- a/pyt-contabilidad/pyt-app/properties/names-sql.properties
+++ b/pyt-contabilidad/pyt-app/properties/names-sql.properties
@@ -296,7 +296,7 @@ co.com.japl.ea.dto.system.ConfigGenericFieldDTO.width=nwidth
 co.com.japl.ea.dto.system.ConfigGenericFieldDTO.valueDefault=sdefault
 co.com.japl.ea.dto.system.ConfigGenericFieldDTO.isVisible=bvisible
 co.com.japl.ea.dto.system.ConfigGenericFieldDTO.fieldShow=sfieldshow
-co.com.japl.ea.dto.system.ConfigGenericFieldDTO.group=sgroup
+co.com.japl.ea.dto.system.ConfigGenericFieldDTO.nameGroup=sgroup
 co.com.japl.ea.dto.system.ConfigGenericFieldDTO.orden=norder
 co.com.japl.ea.dto.system.GroupUsersDTO=TBL_GROUP_USER
 co.com.japl.ea.dto.system.GroupUsersDTO.description=sdescription
@@ -339,7 +339,7 @@ co.com.japl.ea.dto.system.PermissionDTO.name=sname
 co.com.japl.ea.dto.system.PermissionDTO.state=nstate
 co.com.japl.ea.dto.system.UsuarioDTO=TBL_USERS
 co.com.japl.ea.dto.system.UsuarioDTO.fechaFin=dend
-co.com.japl.ea.dto.system.UsuarioDTO.fechaIncio=dstart
+co.com.japl.ea.dto.system.UsuarioDTO.fechaInicio=dstart
 co.com.japl.ea.dto.system.UsuarioDTO.grupoUser=sgroupuser
 co.com.japl.ea.dto.system.UsuarioDTO.nombre=sname
 co.com.japl.ea.dto.system.UsuarioDTO.password=spassword
