load i18n lack Se realiza ajuste del codigo para el funcionamiento con menus, permisos y grupos y se deja acoplado con el login para que solo muestre los menus a los cuales se tienen permisos.

--- a/pyt-contabilidad/pyt-app/properties/names-sql.properties
+++ b/pyt-contabilidad/pyt-app/properties/names-sql.properties
@@ -327,7 +327,7 @@ co.com.japl.ea.dto.system.MenuDTO.iconPath=siconapth
 co.com.japl.ea.dto.system.MenuDTO.state=nstate
 co.com.japl.ea.dto.system.MenuDTO.url=surl
 co.com.japl.ea.dto.system.MenuPermUsersDTO=TBL_MENU_PERM_USER
-co.com.japl.ea.dto.system.MenuPermUsersDTO.groupUsers=sgroupusers
+co.com.japl.ea.dto.system.MenuPermUsersDTO.groupUsers=sgroupuser
 co.com.japl.ea.dto.system.MenuPermUsersDTO.menu=smenu
 co.com.japl.ea.dto.system.MenuPermUsersDTO.perm=sperm
 co.com.japl.ea.dto.system.MenuPermUsersDTO.state=nstate
