--- a/pyt-contabilidad/pom.xml
+++ b/pyt-contabilidad/pom.xml
@@ -43,7 +43,7 @@
 
 	</dependencies>
 	<modules>
-		<module>../ea-constantes</module>
+<!--		<module>../ea-constantes</module>
 		<module>../ea-anotaciones</module>
 		<module>../ea-exceptions</module>
 		<module>../ea-dto</module>
@@ -59,7 +59,7 @@
 		<module>pyt-service</module>
 		<module>pyt-app</module>
 		<module>../ea-sql</module>
-	</modules>
+-->	</modules>
 	<build>
 		<plugins>
 			<plugin>
