--- a/ea-constantes/pom.xml
+++ b/ea-constantes/pom.xml
@@ -9,4 +9,13 @@
 	<groupId>co.com.japl.ea</groupId>
 	<artifactId>ea-constantes</artifactId>
 	<version>${project.version}</version>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.ow2.asm</groupId>
+				<artifactId>asm</artifactId>
+				<version>7.3.1</version>
+			</plugin>
+		</plugins>
+	</build>
 </project>
