--- a/ea-constantes/pom.xml
+++ b/ea-constantes/pom.xml
@@ -11,10 +11,20 @@
 	<version>${project.version}</version>
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.ow2.asm</groupId>
-				<artifactId>asm</artifactId>
-				<version>7.3.1</version>
+			<plugin> 
+				<groupId>org.apache.maven.plugins</groupId>
+            			<artifactId>maven-compiler-plugin</artifactId>
+            			<version>3.7.0</version>
+            			<configuration>
+                			<release>10</release>
+            			</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.ow2.asm</groupId>
+						<artifactId>asm</artifactId>
+						<version>7.3.1</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
