--- a/ea-constantes/pom.xml
+++ b/ea-constantes/pom.xml
@@ -14,8 +14,10 @@
 			<plugin> 
 				<groupId>org.apache.maven.plugins</groupId>
             			<artifactId>maven-compiler-plugin</artifactId>
-            			<version>3.7.0</version>
+            			<version>3.8.1</version>
             			<configuration>
+					<source>10</source>
+					<target>10</target>
                 			<release>10</release>
             			</configuration>
 				<dependencies>
