feature button api fluid Se crea una api fluida para manejar las acciones de los botones, para mostrar o no determinado boton, ademas que con esto se logra colocar en los botones los iconos correspondientes ademas de la tradiccion i18n, por medio de esto se usa un layou para indicar donde se pondran los botones y el resto lo realiza la api.

--- a/pyt-contabilidad/pom.xml
+++ b/pyt-contabilidad/pom.xml
@@ -29,12 +29,16 @@
 		<project.connect.version>${project.version}</project.connect.version>
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
-		</dependency>
+   <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.23.0</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId> 
+            <version>4.12</version>
+        </dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
