feature / aplicando contabilidad se realiza ajustes de mejoras, y solucion de algunos errores encontrados

--- a/pyt-contabilidad/pyt-app/.gitignore
+++ b/pyt-contabilidad/pyt-app/.gitignore
@@ -45,3 +45,6 @@ systemFile
 /*log
 /output_idioma16022020.csv
 /.output_idioma17022020.csv.swp
+/.attach_pid10598
+/.attach_pid18463
+/.attach_pid22711
