--- a/pyt-contabilidad/.project
+++ b/pyt-contabilidad/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>pyt-contabilidad</name>
+	<name>ea-contabilidad</name>
 	<comment></comment>
 	<projects>
 	</projects>
