--- a/pyt-contabilidad/ea-hibernate/pom.xml
+++ b/pyt-contabilidad/ea-hibernate/pom.xml
@@ -3,8 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>co.com.pyt</groupId>
-		<artifactId>pyt-contabilidad</artifactId>
+		<groupId>co.com.japl.ea</groupId>
+		<artifactId>ea-contabilidad</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<groupId>co.com.japl.ea</groupId>
