--- a/pyt-contabilidad/pom.xml
+++ b/pyt-contabilidad/pom.xml
@@ -4,12 +4,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>co.com.pyt</groupId>
-	<artifactId>pyt-contabilidad</artifactId>
+	<groupId>co.com.japl.ea</groupId>
+	<artifactId>ea-contabilidad</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
-	<name>pyt-contabilidad</name>
+	<name>ea-contabilidad</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
