--- a/ea-sql/pom.xml
+++ b/ea-sql/pom.xml
@@ -7,7 +7,7 @@
 		<artifactId>ea-contabilidad</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<groupId>com.japl.ea</groupId>
+	<groupId>co.com.japl.ea</groupId>
 	<artifactId>ea-sql</artifactId>
 	<version>${project.version}</version>
 	<description>Projecto creado solo para contener las consultas sql que usara la aplicacion ytener todas los script versionados</description>
