--- a/pyt-contabilidad/ea-app/pom.xml
+++ b/pyt-contabilidad/ea-app/pom.xml
@@ -138,7 +138,7 @@
 			<version>${project.connect.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.japl.ea</groupId>
+			<groupId>co.com.japl.ea</groupId>
 			<artifactId>ea-sql</artifactId>
 			<version>1.2.1-BETA</version>
 		</dependency>
