--- a/ea-contabilidad/ea-app/pom.xml
+++ b/ea-contabilidad/ea-app/pom.xml
@@ -31,8 +31,8 @@
 			<!-- <scope>${project.scope}</scope> -->
 		</dependency>
 		<dependency>
-			<groupId>co.com.arquitectura.anotaciones</groupId>
-			<artifactId>arquitetura-anotaciones</artifactId>
+			<groupId>co.com.japl.arquitectura</groupId>
+			<artifactId>arquitectura-anotaciones</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
@@ -54,8 +54,8 @@
 			<!-- <scope>${project.scope}</scope> -->
 		</dependency>
 		<dependency>
-			<groupId>co.com.arquitectura.librerias</groupId>
-			<artifactId>arquitecrura-librerias</artifactId>
+			<groupId>co.com.japl.arquitectura</groupId>
+			<artifactId>arquitectura-librerias</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<!-- <dependency> -->
