se realiza ajuste y soluciones de problmeas encontrados con nuevo sistema de compilacion de clases de servicios para unifivacion de las mismas

--- a/ea-contabilidad/ea-service/pom.xml
+++ b/ea-contabilidad/ea-service/pom.xml
@@ -98,6 +98,9 @@
 						<annotationProcessor>
 							co.com.arquitectura.proccessor.implement.ServiceProccessor
 						</annotationProcessor>
+						<annotationProcessor>
+							co.com.arquitectura.proccessor.implement.ImplementsProccessor
+						</annotationProcessor>
 					</annotationProcessors>
 				</configuration>
 			</plugin>
