--- a/ea-contabilidad/ea-gdb/pom.xml
+++ b/ea-contabilidad/ea-gdb/pom.xml
@@ -66,7 +66,7 @@
 		<dependency>
 			<groupId>co.com.japl.ea</groupId>
 			<artifactId>ea-sql</artifactId>
-			<version>1.2.1-BETA</version>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -96,6 +96,9 @@
 					<annotationProcessors>
 						<annotationProcessor>
 							co.com.arquitectura.proccessor.implement.ServiceProccessor
+						</annotationProcessor>
+						<annotationProcessor>
+							co.com.arquitectura.proccessor.implement.ImplementsProccessor
 						</annotationProcessor>
 					</annotationProcessors>
 				</configuration>
