--- a/ea-contabilidad/ea-app/properties/names-sql.properties
+++ b/ea-contabilidad/ea-app/properties/names-sql.properties
@@ -326,6 +326,7 @@ co.com.japl.ea.dto.system.MenuDTO.iconCss=siconcss
 co.com.japl.ea.dto.system.MenuDTO.iconPath=siconapth
 co.com.japl.ea.dto.system.MenuDTO.state=nstate
 co.com.japl.ea.dto.system.MenuDTO.url=surl
+co.com.japl.ea.dto.system.MenuDTO.shortcut=sshortcut
 co.com.japl.ea.dto.system.MenuPermUsersDTO=TBL_MENU_PERM_USER
 co.com.japl.ea.dto.system.MenuPermUsersDTO.groupUsers=sgroupuser
 co.com.japl.ea.dto.system.MenuPermUsersDTO.menu=smenu
