--- a/ea-contabilidad/ea-app/properties/data.properties
+++ b/ea-contabilidad/ea-app/properties/data.properties
@@ -1,2 +1,4 @@
 path=./systemFile
 services.list=com.pyt.service.implement.inventario.ServicesPackage.List
+path.rememberme=/home/alejo/ea/config/files/
+path.versionrunner=/home/alejo/ea/config/files/
