--- a/ea-contabilidad/ea-app/properties/log.properties
+++ b/ea-contabilidad/ea-app/properties/log.properties
@@ -1,3 +1,3 @@
 modes:ERROR,INFO,WARN,DEBUG
-path-log=logger/logger-app.log
-path-trace=logger/logger-trace.log
+path-log=../logger/logger-app.log
+path-trace=../logger/logger-trace.log
