--- a/ea-contabilidad/ea-app/properties/data.properties
+++ b/ea-contabilidad/ea-app/properties/data.properties
@@ -1,4 +1,4 @@
 path=./systemFile
-services.list=com.pyt.service.implement.inventario.ServicesPackage.List
+services.list=co.com.japl.ea.service.implement.ServicesPackage.List
 path.rememberme=/home/alejo/ea/config/files/
 path.versionrunner=/home/alejo/ea/config/files/
