--- a/ea-contabilidad/ea-app/properties/names-sql.properties
+++ b/ea-contabilidad/ea-app/properties/names-sql.properties
@@ -141,6 +141,7 @@ co.com.japl.ea.dto.dto.DocumentosDTO.fieldColumn=nfieldcolumn
 co.com.japl.ea.dto.dto.DocumentosDTO.fieldIsVisible=nfieldvisible
 co.com.japl.ea.dto.dto.DocumentosDTO.fieldHasDefaultValue=nfieldhasdefaulval
 co.com.japl.ea.dto.dto.DocumentosDTO.fieldDefaultValue=sdefaultvalue
+co.com.japl.ea.dto.dto.DocumentosDTO.position=nposition
 co.com.japl.ea.dto.dto.EmpresaDTO=TBL_ENTERPRISE
 co.com.japl.ea.dto.dto.EmpresaDTO.correoElectronico=semail
 co.com.japl.ea.dto.dto.EmpresaDTO.digitoVerificacion=ndigitvalid
